--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -51,6 +51,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Surface.fs" />
     <Compile Include="Landscape.fs" />
+    <Compile Include="Ascend.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
