--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Surface.fs" />
     <Compile Include="Landscape.fs" />
-    <Compile Include="Ascend.fs" />
+    <Compile Include="AssemblyInfo.fs" />
+    <None Include="App.config" />
+    <Compile Include="ClimbHill.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
