--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -49,9 +49,11 @@
   <ItemGroup>
     <Compile Include="Surface.fs" />
     <Compile Include="Landscape.fs" />
+    <Compile Include="Fuel.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="ClimbHill.fs" />
+    <Compile Include="EstimateLife.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
