--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="ClimbHill.fs" />
+    <Compile Include="ClimbHillTests.fsx" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
