--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -50,10 +50,12 @@
     <Compile Include="Surface.fs" />
     <Compile Include="Landscape.fs" />
     <Compile Include="Fuel.fs" />
+    <Compile Include="Reception.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="ClimbHill.fs" />
     <Compile Include="EstimateLife.fs" />
+    <Compile Include="Antenna.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
