common ImproveIncrementally for for climb and design

--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="Reception.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
+    <Compile Include="Common.fs" />
     <Compile Include="ClimbHill.fs" />
     <Compile Include="EstimateLife.fs" />
     <Compile Include="Antenna.fs" />
