--- a/src/Freddie.fsproj
+++ b/src/Freddie.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="ClimbHill.fs" />
     <Compile Include="ClimbHillTests.fsx" />
     <Compile Include="Program.fs" />
+    <None Include="TestRunner.fsx" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
